src/yini_test/cases/golden/strict/invalid/document-terminator/missing-end-marker.strict.yini
@yini strict

^ Document
name = "strict-missing-end-marker"
status = "incomplete"
